# mastering_llm_deployments

./: Outline.md  README.md  pyproject.toml  requirements.txt
00_Course_Intro/: 00_course_overview.ipynb
01_Foundations/: 01_transformers_basics.ipynb  02_model_architecture.ipynb  03_bert_gpt.ipynb
02_Fine_Tuning/: 01_transfer_learning.ipynb  02_sentiment_analysis.ipynb  03_summarization.ipynb  04_Fine_Tuning_LLM_Healthcare.ipynb  README.md  finetuning_research.md
03_Model_Optimization/: 01_intro_to_optimization.ipynb  02_knowledge_distillation.ipynb  03_pruning.ipynb  04_quantization.ipynb  05_benchmarking.ipynb
04_Deployment/: 01_local_serving.ipynb  02_gradio_ui.ipynb  03_docker_packaging.md  04_aws_ecs_deployment.md
05_RAG/: 01_rag_langchain.ipynb  02_rag_llamaindex.ipynb  03_rag_evaluation.ipynb  03b_rag_evaluation_wandb.ipynb  evaluation_results.csv  golden_dataset.csv  qa_prompt.txt
Capstone/: capstone_project.ipynb
