[project]
name = "mastering-llm-deployments-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "fastapi>=0.124.4",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "rouge-score>=0.1.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchtext>=0.18.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
